@@ -99,5 +99,5 @@ upgrades.barrack.crew=5
 
 upgrades.ship_free_space=100
 
-engineering.craft_cost.medpack=1
+engineering.craft_cost.medpack=3
 engineering.craft_cost.cylinders=2
