@@ -3,6 +3,7 @@ VERSION 0.3.1
 IN PROGRESS...
 
 * Bugfixes: #130
+* Crafting of items on board of ship now requires resources
 
 ===============================================
 
